Update score header

--- a/score.html
+++ b/score.html
@@ -30,7 +30,7 @@
         <div class="scoreguest-container">
         <ul>
             <li>GUEST</li>
-            <li id="changeguest-name">STI CAINTA</li>
+            <li id="changeguest-name">STI FAIRVIEW</li>
         </ul>
             <p id="scoreguest-ctn">0</p>
          
